// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersDashboard /> reacts to group changes 1`] = `
Array [
  Object {
    "label": "All Groups",
    "value": "",
  },
]
`;

exports[`<UsersDashboard /> reacts to group changes 2`] = `
Array [
  Object {
    "label": "All Groups",
    "value": "",
  },
  Object {
    "label": "Test Group",
    "value": "test_group_id",
  },
]
`;

exports[`<UsersDashboard /> renders correctly 1`] = `
<Fragment>
  <GraphWrappers__ControlBar>
    <TimeControl
      endAtMoment={"2010-01-01T04:06:07.000Z"}
      onChange={[Function]}
    />
  </GraphWrappers__ControlBar>
  <ChartFilters
    groupFilterOptions={
      Array [
        Object {
          "label": "All Groups",
          "value": "",
        },
        Object {
          "label": "Test Group",
          "value": "test_group_id",
        },
      ]
    }
    onGroupFilter={[Function]}
    onProjectFilter={null}
    onTopicFilter={null}
    projectFilterOptions={null}
    topicFilterOptions={null}
  />
  <GraphWrappers__GraphsContainer>
    <Outlet
      endAt="2010-01-01T04:06:07.000Z"
      id="app.containers.Admin.dashboard.users.graphs"
    />
  </GraphWrappers__GraphsContainer>
</Fragment>
`;
